opponent is now visible on the screen

--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,10 @@ body {
     background-color: #ff5605;
 }
 
+.opponent {
+    background-color: #aaa;
+}
+
 #log {
     width: 337px;
     height: 1.5em;
