--- a/src/Board.css
+++ b/src/Board.css
@@ -1,10 +1,4 @@
-.game {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.board {
+.Board {
     display: flex;
     flex-direction: column;
 }
@@ -28,11 +22,4 @@
 
 .fruit {
     background-color: #ff5605;
-}
-
-#log {
-    font-family: 'Helvetica Neue';
-    width: 337px;
-    height: 1.5em;
-    margin-top: 0.5em;
 }
